--- a/style.css
+++ b/style.css
@@ -303,6 +303,7 @@
     border-radius: 5px;
     background-color: #DFFBFF;
     border: none;
+    box-shadow: 2px 2px 10px #666;  
  }
  .pensión{
     background-color: #DFFBFF;
@@ -314,6 +315,8 @@
     left: 60px;
     bottom: 110px;
     border-radius: 5px;
+    box-shadow: 2px 2px 10px #666;  
+
  }
  #retiro{
     position: relative;
@@ -344,4 +347,23 @@
      left:50px;
      bottom: 90px;
  }
+ .formula{
+    background-color: #DFFBFF;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px #666; 
+    position: relative;
+    bottom: 90px;
+    font-size: 10px;
+    width: 120px;
+    height: 200px;;
+ }
+ .ab, .cd, .ef{
+    width: 90px;
+    position: relative;
+    border-radius: 5px;
+    background-color: #DFFBFF;
+    border: none;
+    box-shadow: 2px 2px 10px #666;  
+ }
+ 
 }
