--- a/style.css
+++ b/style.css
@@ -325,14 +325,19 @@
     font-size: 13px;
  }
  .medidas-ter{
-     width: 100px;
+     width: 200px;
      height: 50px;
      font-size: 11px;
      position: relative;
-     left: 180px;
-     bottom: 60px;
+     left: 100px;
+     bottom: 120px;
 
  }
+ .Nivel{
+    position: relative;
+    left: -50px;
+    bottom:-90px ;
+}
  .mece{
     background-color: #98E0ED;
     width: 80px;
@@ -365,5 +370,7 @@
     border: none;
     box-shadow: 2px 2px 10px #666;  
  }
+ 
+
  
 }
