--- a/style.css
+++ b/style.css
@@ -360,7 +360,26 @@
     bottom: 90px;
     font-size: 10px;
     width: 120px;
-    height: 200px;;
+    height: 220px;;
+ }
+ .cal{
+     position: relative;
+     bottom: -23px;
+ }
+ .esperanza{
+    background-color: #DFFBFF;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px #666; 
+    font-size: 10px;
+    width: 160px;
+    height: 200px;
+    position: relative;
+    left: 140px;
+    bottom: 300px;
+ }
+ .vida{
+     position: relative;
+     bottom: -10px;
  }
  .ab, .cd, .ef{
     width: 90px;
