--- a/style.css
+++ b/style.css
@@ -395,7 +395,12 @@
     border: none;
     box-shadow: 2px 2px 10px #666;
  }
- 
+ .root{
+    font-family:'Ruda', sans-serif ;
+    font-size: 18px;
+    position: relative;
+    bottom: -30px;
+ }
 
  
 }
